--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,69 +1,3 @@
-$bottegaGreen: #00CB79;
-$clearBlue: #45B0E5;
-$mainGray: #CFCFCF;
-$darkGray: #444444;
-$font-primary: 'Monserrat', sans-serif;
-
-.background-skew {
-    width: 100vw;
-    height: 700px;
-    background-color: $darkGray;
-    transform: skewY(-10deg);
-    margin-top: -17rem;
-    padding-top: 17rem;
-    border-bottom: 1rem solid $bottegaGreen;
-
-}
-
-.background-skew > * {
-    transform: skewY(10deg);
-}
-
-.madlib-heading {
-    text-align: center;
-    margin: 20px;
-    padding-top: 46px;
-    color: white;
-    font-weight: 700;
-    font-family: $font-primary;
-}
-
-.madlib-subheading {
-    margin-bottom: 46px;
-    color: rgba(255,255,255,0.75);
-    font-size: 15px;
-    font-weight: 500;
-}
-
-
-
-
-
-// html {
-//     font-size: 62.5%; // 1rem is 10px
-// }
-
-// *,
-// *::after,
-// *::before {
-//     margin: 0;
-//     padding: 0;
-//     box-sizing: inherit;
-//     font-family: 'montserrat';
-// }
-
-// body {
-//     overflow-x: hidden;
-//     font-weight: normal;
-
-//     -webkit-font-smoothing: antialiased;
-//     -moz-osx-font-smoothing: grayscale;
-//     text-rendering: optimizeLegibility;
-//     -webkit-tap-highlight-color: transparent;
-// }
-
-// .app {
-//     margin-top: 2rem;
-//     display: grid;
-//     justify-items: center;
-// }
+@import "./variables";
+@import "./components/madlib_form.scss";
+@import "./header.scss";
