--- a/src/style/components/madlib_form.scss
+++ b/src/style/components/madlib_form.scss
@@ -40,3 +40,36 @@ input {
     text-align: center;
     color: white;
 }
+
+@mixin buttonStyles {
+    height: 50px;
+    width: 300px;
+    border-radius: 4px;
+    color: white !important;
+    font-size: 1.25em;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
+    margin-top: 42px;
+}
+
+.generate-button {
+    background-color: $bottegaGreen;
+    @include buttonStyles;
+}
+
+.clear-button {
+    background-color: $clearBlue;
+    padding-top: 9px;
+    text-align: center;
+    @include buttonStyles;
+}
+
+.button-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+input:focus,
+button:focus {
+    outline: none;
+}
