--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,7 +1,7 @@
 @import "./variables";
 @import "./components/madlib_form.scss";
 @import "./header.scss";
-
+@import "./components/madlib_content.scss";
 
 body {
     font-family: $font-primary;
