--- a/src/style/components/madlib_content.scss
+++ b/src/style/components/madlib_content.scss
@@ -11,3 +11,18 @@
     padding: 42px;
     margin-top: -21px;
 }
+
+.black-label {
+    background-color: #000000;
+    border-radius: 100px;
+    width: 20px;
+    height: 20px;
+    font-size: 12px;
+    text-align: center;
+    color: white;
+    margin: 5px;
+}
+
+.bold-text {
+    color: $clearBlue;
+}
